--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "repository": "git@github.com:dipix-empire/payments.git",
   "author": "Philainel <toropovmat@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "node .",
+    "dev": "nodemon index.ts",
+    "docker-dev": "prisma db push && nodemon index.ts",
+    "prisma-format": "prisma format && prisma db push && prisma generate"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
+    "ts-node": "^10.9.2",
     "typescript": "4.9.5"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "axios": "^1.6.8",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-schedule": "^2.1.1",
+    "redis": "^4.6.14"
   }
 }
